--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "heroku-postbuild": "react-scripts build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
