--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "heroku-postbuild": "yarn && yarn run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
