--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "babel-loader": "8.1.0",
     "bootstrap": "^4.5.3",
+    "express": "^4.17.1",
     "react": "^17.0.1",
     "react-calendar": "^3.3.0",
     "react-dom": "^17.0.1",
@@ -29,7 +30,7 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-    "start": "serve -s build",
+    "start": "node server.js",
     "heroku-postbuild": "yarn && yarn run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
