--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.21",
     "@types/react": "^17.0.0",
+    "@types/react-calendar": "^3.1.2",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
